# ophidia-server

./: .gitignore  AUTHORS.md  HISTORY.md  Makefile.am  NOTICE.md  README.md  bootstrap  configure.ac
etc/: oph_server.in  oph_server.service.in  oph_server_logrotate.in  ophidiadb.conf  ophidiadb.conf.in  ophidiadb.sql  rmanager.conf  server.conf.in
etc/cert/: openssl.cnf
etc/config/: cert.sh  my.cnf.template  mysql.sql.template  ophidia-conf.sh  ophidia-run.sh  ophidia-start.sh  ophidia-stop.sh  ophidiadb.conf.template  slurm-conf.sh  slurm.conf.template
etc/rms/: slurm.conf  slurm.conf.in  slurm_multiuser.conf
etc/script/: oph_adduser.sh  oph_cancel.sh  oph_check.sh  oph_count.sh  oph_create_hp.sh  oph_destroy_hp.sh  oph_get_reserved_hosts.sh  oph_get_total_hosts.sh  oph_ioserver.conf.template  oph_odb.sh  oph_progress.sh  oph_release_hp.sh  oph_reserve_hp.sh  oph_retrieve_hp.sh  oph_retrieve_list.sh  oph_start.sh  oph_submit.sh  start_ioserver.sh  stop_ioserver.sh
etc/script/multinode/: epilog.sh  epilog_ophidia.sh  prolog.sh  start_ioserver_multi.sh  start_server.sh
etc/web/: .htaccess  aaa.php  env.php.in  header.php  index.php  openid.php  sessions.php  style.css  tailer.php  userinfo.php
etc/xml/: OPH_CALL_operator_1.0.xml  OPH_FOR_operator_1.0.xml  OPH_LOG_INFO_operator_1.0.xml  OPH_MASSIVE_operator_1.0.xml  OPH_RESUME_operator_1.0.xml  OPH_SET_operator_1.0.xml  OPH_WAIT_operator_1.0.xml
src/: Makefile.am  debug.c  debug.h  hashtbl.c  hashtbl.h  oph_auth.c  oph_auth.h  oph_execute_main.c  oph_execute_main.h  oph_filters.c  oph_filters.h  oph_flow_control_operators.c  oph_flow_control_operators.h  oph_gather.h  oph_job_list.c  oph_job_list.h  oph_json_library.h  oph_known_operators.c  oph_known_operators.h  oph_license.h  oph_manage_user.c  oph_management_operators.c  oph_management_operators.h  oph_massive_operations.c  oph_massive_operations.h  oph_memory_job.c  oph_memory_job.h  oph_notify.c  oph_notify.h  oph_odb_job.c  oph_odb_job.h  oph_ophidiadb.c  oph_ophidiadb.h  oph_ophidiadb_fs_library.c  oph_ophidiadb_fs_library.h  oph_ophidiadb_query.h  oph_parser.c  oph_parser.h  oph_plugin.c  oph_plugin.h  (+26 more)
src/gsi/: gsi.c  gsi.h  oph_client.c  oph_server.c
src/oph_json/: oph_json_common.c  oph_json_common.h  oph_json_graph.c  oph_json_graph.h  oph_json_grid.c  oph_json_grid.h  oph_json_multigrid.c  oph_json_multigrid.h  oph_json_objkeys.h  oph_json_text.c  oph_json_text.h  oph_json_tree.c  oph_json_tree.h
src/oph_workflow/: oph_workflow_define.h  oph_workflow_exit_codes.h  oph_workflow_functions.h  oph_workflow_library.h  oph_workflow_parsing.c  oph_workflow_setup.c  oph_workflow_status_codes.h  oph_workflow_structs.c  oph_workflow_structs.h  oph_workflow_utils.c
src/oph_workflow/json_schema/: oph_request.json
src/ssl/: oph_client.c  oph_server.c
test/: Makefile.am  oph_json_common_stub.c  oph_odb_job_stub.c  oph_ophidiadb_fs_library_stub.c  oph_ophidiadb_stub.c  oph_rmanager_stub.c  oph_server_test.c
test/etc/: server.conf
test/json/: 123_2.json  123_3.json  123_5.json  123_8.json
